Fri Sep 19 09:32:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/unload_libace.mpb:
          This project doesn't use acedefaults which then results in some
          borland required flags not being set

Thu Sep 18 21:15:57 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

	* m4/ace_defines.m4:
        * m4/ace_functions.m4:
        * m4/ace_headers.m4:

          Update m4 quoting so that macros work with both old and current
          versions of autoconf.  Tested with both autoconf 2.58 (which is
          the earliest version we support) and the recently released 2.63.
          Fixes bugzilla issue #3396.

Thu Sep 18 18:54:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/INET_Addr.{h,cpp}:
          Use bool and several doxygen changes

Thu Sep 18 10:30:00 UTC 2008  Simon Massey  <sma@prismtech.com>

        * bin/diff-builds-and-group-fixed-tests-only.sh:

          Provide no test revision grouping results as well.

Thu Sep 18 06:33:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Time.{h,cpp,inl} (strptime):
          Always clear struct tm to zero

        * tests/OS_Test.cpp:
          Updated for change above

        * tests/Cached_Conn_Test.cpp:
          Removed check for deprecated compiler

Wed Sep 17 18:47:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Cached_Connect_Strategy_T.{h,cpp}:
          reuse_addr is a bool

Wed Sep 17 18:11:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/checked_iterator.h:
          Reverted change below for the moment, causes a lot of warnings in some
          builds.

        Tue Sep 16 12:48:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
        * ace/checked_iterator.h:
          Check for dinkum stl.  Thanks to Mark Hebbel
          <Mark dot Hebbel at baslerweb dot com> for reporting this. This
          fixes bugzilla 3420

Wed Sep 17 14:13:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>