@@ -1,3 +1,8 @@
+Fri Sep 19 09:41:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Network_Adapters_Test.cpp:
+          Unicode fix
+
 Fri Sep 19 09:32:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/unload_libace.mpb:
